# tinycom

./: CMakeLists.txt  LICENSE  README.md
src/: UI.c  UI.h  main.c  uart.c  uart.h  utils.c  utils.h
